training data set (probably working correctly type shi)